Fix the placeholder of the search inputs
The "placeholder" would overlap the content of the input, the placeholder would be capitalised and the font wouldn't match.

--- a/css/components/ui/custom_select.scss
+++ b/css/components/ui/custom_select.scss
@@ -42,9 +42,9 @@
     }
   }
 
-  &:not(.-closed).-search {
-    .custom-select-text span {
-      opacity: 0;
+  &.-search:not(.-closed) {
+    .custom-select-text > div {
+      display: none;
     }
   }
 
@@ -93,7 +93,9 @@
       white-space: nowrap;
       line-height: 17px;
       align-items: center;
-      text-transform: capitalize;
+      // Don't capitalise the text here because the case of the
+      // content of the input won't match the case of the text
+      // when the focus is somewhere else
     }
   }
 
@@ -180,5 +182,6 @@
     // padding-bottom: 2px;
     z-index: 10;
     padding: 10px 20px;
+    font-family: $base-font-family;
   }
 }
